# influxdb-alerter

./: .gitignore  Dockerfile  LICENSE  README.md  alerter.py  build.sh  config.yaml  example-config.yaml  go.mod  go.sum  main.go  pyproject.toml  renovate.json  requirements.txt  run.sh
cmd/: check.go  root.go
influxdb_alerter/: __main__.py
internal/checker/: checker.go
pkg/notifier/: notifier.go
pkg/notifier/console/: console.go
pkg/notifier/email/: email.go
pkg/notifier/http/: http.go
