[tool.poetry]
name = "influxdb-alerter"
version = "0.2.0"
description = ""
authors = ["Niko Korhonen <1004138+niktheblak@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
influxdb = "^5.2.3"
confuse = "^1.0.0"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
