[tool.poetry]
name = "influxdb-alerter"
version = "0.3.0"
description = ""
authors = ["Niko Korhonen <1004138+niktheblak@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
influxdb = "^5.3.1"
confuse = "^2.0.0"
pytz = "^2022.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
